--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    android.buildTypes.each { type ->
+        type.buildConfigField 'String', 'BASE_URL', '"http://desafiobrq.herokuapp.com/v1/"'
+    }
 }
 
 dependencies {
@@ -40,4 +44,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+
+    //Servirá para converter nosso objeto vindo do JSON
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
